hphp/test/zend/good/ext-spl/fileobject_setmaxlinelen_error001.php
<?php
$s = new SplFileObject( __FILE__ );
try {
    $s->setMaxLineLen(-1);
}
catch (DomainException $e) {
    echo 'DomainException thrown';
}

?>