hphp/test/zend/bad/ext-spl/iterator_063.php
<?php
class myLimitIterator extends LimitIterator {
	
}
try {
	$it = new myLimitIterator();
} catch (InvalidArgumentException $e) {
	echo 'InvalidArgumentException thrown';
}
?>